--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-#setcion1{
-color: green;
-}
-#target {
-color: green;
+#section1{
+background-color: green;
+height: 100px;
+width 50px;
+color: black;
 }
 
